--- a/index.html
+++ b/index.html
@@ -5,10 +5,49 @@
 <head>
     <Title>TITLE</Title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- My css -->
+    <link href="style.css" rel="stylesheet">
+    <!-- Jquery -->
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+    <!-- My JavaScript -->
+    <script src="game_model.js"></script>
+    <script src="game_controller.js"></script>
 </head>
 
 <body>
-    <h1>Hello World</h1>
+
+    <div id="content">
+        <div id="game_conolls" class="container">
+            <div class="row align-items-center">
+                <div id="dificulty_col" class="col ui-field-contain">
+                    <select name="select-native-1" id="difficulties">
+                    </select>
+                </div>
+                <div class="col">
+                    <img src="img/timer.svg" alt="">
+                    <div id="timer"></div>
+                </div>
+                <div class="col">
+                    <img src="img/red-flag.svg" alt="">
+                    <div id="bomb_count"></div>
+                </div>
+                <div class="col">
+                    <img src="img/refresh.svg" class="hover reload" alt="">
+                </div>
+            </div>
+        </div>
+        <div id="game_panel" class="container">
+        </div>
+        <div id="game_results" class="container">
+        </div>
+    </div>
+
 </body>
+
 
 </html>
