--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <!-- URL: https://antoineb3.github.io/ -->
 
 <head>
-    <Title>TITLE</Title>
+    <Title>Mine Sweeper</Title>
+    <link rel="icon" href="img/mine.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -11,9 +12,9 @@
     <!-- My css -->
     <link href="style.css" rel="stylesheet">
     <!-- Jquery -->
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.6.4.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <!-- My JavaScript -->
     <script src="game_model.js"></script>
     <script src="game_controller.js"></script>
@@ -24,26 +25,26 @@
     <div id="content">
         <div id="game_conolls" class="container">
             <div class="row align-items-center">
-                <div id="dificulty_col" class="col ui-field-contain">
+                <div id="dificulty_col" class="col-12 col-sm-3 ui-field-contain">
                     <select name="select-native-1" id="difficulties">
                     </select>
                 </div>
-                <div class="col">
+                <div class="col-4 col-sm-3">
                     <img src="img/timer.svg" alt="">
                     <div id="timer"></div>
                 </div>
-                <div class="col">
+                <div class="col-4 col-sm-3">
                     <img src="img/red-flag.svg" alt="">
                     <div id="bomb_count"></div>
                 </div>
-                <div class="col">
+                <div class="col-4 col-sm-3">
                     <img src="img/refresh.svg" class="hover reload" alt="">
                 </div>
             </div>
         </div>
         <div id="game_panel" class="container">
         </div>
-        <div id="game_results" class="container">
+        <div id="game_results">
         </div>
     </div>
 
